[gd_scene load_steps=11 format=3 uid="uid://d2spcqwy8wug1"]

[ext_resource type="PackedScene" uid="uid://cf57h23ilq1xh" path="res://scenes/enemy_base/enemy_base.tscn" id="1_v75g3"]
[ext_resource type="Script" uid="uid://mr5freb5k2oo" path="res://scenes/spectral_monk/spectral_monk.gd" id="2_ssifd"]
[ext_resource type="Texture2D" uid="uid://bs78ikuhqxtvu" path="res://assets/enemies/sprectral_monk.png" id="3_dy3pa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ofb4"]
atlas = ExtResource("3_dy3pa")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xd3n"]
atlas = ExtResource("3_dy3pa")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc7sm"]
atlas = ExtResource("3_dy3pa")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5u86"]
atlas = ExtResource("3_dy3pa")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_iuo8y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ofb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xd3n")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc7sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5u86")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pmuo"]
size = Vector2(12, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dy3pa"]
size = Vector2(12, 13)

[node name="SpectralMonk" instance=ExtResource("1_v75g3")]
script = ExtResource("2_ssifd")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_iuo8y")
animation = &"attack"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_0pmuo")

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_dy3pa")

[node name="FloorDetection" type="RayCast2D" parent="." index="3"]
position = Vector2(8, 0)
target_position = Vector2(0, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

[node name="AttackTimer" type="Timer" parent="." index="6"]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
